--- a/local-minikube/configmaps/oauth2-proxy.yaml
+++ b/local-minikube/configmaps/oauth2-proxy.yaml
@@ -15,7 +15,7 @@ data:
   OAUTH2_PROXY_COOKIE_REFRESH: 29m
   OAUTH2_PROXY_COOKIE_SECURE: "true"
   OAUTH2_PROXY_WHITELIST_DOMAINS: "*.localhost"
-  OAUTH2_PROXY_OIDC_ISSUER_URL: http://sso.localhost/realms/demo
+  OAUTH2_PROXY_OIDC_ISSUER_URL: http://auth.localhost/realms/demo
   OAUTH2_PROXY_REDIRECT_URL: http://backend-api.localhost/oauth2/callback
   OAUTH2_PROXY_REVERSE_PROXY: "true"
   OAUTH2_PROXY_SET_AUTHORIZATION_HEADER: "true"
